<resources>
    <string name="app_name">ProyectoAndroid</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="logotipo">Logotipo</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_gerente">MainActivityGerente</string>
    <string name="title_activity_main_personal">MainActivityPersonal</string>
</resources>
